<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4"
        tools:context=".MainActivity">

        <!--Header-->
        <View
            android:id="@+id/header"
            android:layout_height="48dp"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/header"
            app:layout_constraintTop_toTopOf="@id/header"
            app:layout_constraintBottom_toBottomOf="@id/header"
            android:text="@string/ip"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            />

        <Button
            android:id="@+id/header_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toTopOf="@id/header"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="@id/header"
            android:layout_marginEnd="16dp"
            />

        <EditText
            android:id="@+id/ed_input_ip"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="@id/header"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toEndOf="@id/header_text"
            app:layout_constraintEnd_toStartOf="@id/header_save"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_edittext"
            android:drawablePadding="9dp"
            android:textSize="15dp"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:hint="@string/url"
            />

        <!--Footer-->
        <View
            android:id="@+id/footer"
            android:layout_height="80dp"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/btn_footer_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/footer"
            app:layout_constraintEnd_toEndOf="@id/footer"
            app:layout_constraintBottom_toBottomOf="@id/footer"
            app:layout_constraintTop_toTopOf="@id/footer"
            android:text="@string/start"/>

        <!--Content-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constrainedHeight="true"
            android:background="@android:color/white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>