<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/horizontal_line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/black"/>

        <View
            android:id="@+id/line1"
            android:layout_width="1dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/header_time"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line1"
            android:background="@android:color/black"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <TextView
            android:id="@+id/header_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@id/line1"
            app:layout_constraintBottom_toBottomOf="@id/line1"
            app:layout_constraintStart_toEndOf="@id/line1"
            app:layout_constraintEnd_toStartOf="@id/line2"
            app:layout_constraintHorizontal_weight="1"
            android:gravity="center_horizontal"
            android:ellipsize="end"/>

        <View
            android:id="@+id/line2"
            android:layout_width="1dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/header_time"
            app:layout_constraintEnd_toStartOf="@id/header_mac"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line1"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/header_mac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mac"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@id/line2"
            app:layout_constraintBottom_toBottomOf="@id/line2"
            app:layout_constraintStart_toEndOf="@id/line2"
            app:layout_constraintEnd_toStartOf="@id/line3"
            app:layout_constraintHorizontal_weight="3"
            android:gravity="center_horizontal"
            android:ellipsize="end"/>

        <View
            android:id="@+id/line3"
            android:layout_width="1dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/header_mac"
            app:layout_constraintEnd_toStartOf="@id/header_status"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line1"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/header_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@id/line3"
            app:layout_constraintBottom_toBottomOf="@id/line3"
            app:layout_constraintStart_toEndOf="@id/line3"
            app:layout_constraintEnd_toStartOf="@id/line4"
            app:layout_constraintHorizontal_weight="1"
            android:gravity="center_horizontal"
            android:ellipsize="end"/>

        <View
            android:id="@+id/line4"
            android:layout_width="1dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/header_status"
            app:layout_constraintEnd_toStartOf="@id/header_action"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line1"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/header_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@id/line4"
            app:layout_constraintBottom_toBottomOf="@id/line4"
            app:layout_constraintStart_toEndOf="@id/line4"
            app:layout_constraintEnd_toStartOf="@id/line5"
            app:layout_constraintHorizontal_weight="1.5"
            android:gravity="center_horizontal"
            android:ellipsize="end"/>

        <View
            android:id="@+id/line5"
            android:layout_width="1dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/header_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line1"
            android:background="@android:color/black"/>

        <View
            android:id="@+id/horizontal_line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>